Two identical texture file nodes, but drastically different playback performance on Cycles #100106

Closed
opened 2022-08-01 01:59:57 +02:00 by nameless · 22 comments

System Information
Operating system: Windows-10-10.0.17763-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.59

Blender Version
Broken: version: 3.2.1, branch: master, commit date: 2022-07-05 15:44, hash: a2d59b2dac

Short description of error
Playback in viewport with Cycles is laggy when using bottom texture node. Top texture node provides smooth playback. Those two textures nodes seem to be identical, have identical mapping, are using identical image file and I don't know why there's a difference in playback smoothness.

Possibly to happen in 3.3.0, too (difficult to narrow down as it seems there might be few factors that slow down playback with Cycles).

Exact steps for others to reproduce the error

  1. plug top texture node to Base input of Principled node, hit Play, camera movement is relatively smooth
  2. change texture node to bottom one and camera movement is laggy/choppy (with optix)

Video demonstration: https:*files.catbox.moe/t1xxbd.mp4 or https:*files.catbox.moe/n75y4r.mp4

Screenshot of node setup (top texture node is fine, bottom one is problematic):
image.png

I can send privately a bit simplified .blend file to developer.
test file (not complete):
https://drive.google.com/file/d/1Rb1nNZhsdWzGN-6FFITyw08zQw5wEnof/view?usp=sharing

**System Information** Operating system: Windows-10-10.0.17763-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.59 **Blender Version** Broken: version: 3.2.1, branch: master, commit date: 2022-07-05 15:44, hash: `a2d59b2dac` **Short description of error** Playback in viewport with Cycles is laggy when using bottom texture node. Top texture node provides smooth playback. Those two textures nodes seem to be identical, have identical mapping, are using identical image file and I don't know why there's a difference in playback smoothness. Possibly to happen in 3.3.0, too (difficult to narrow down as it seems there might be few factors that slow down playback with Cycles). **Exact steps for others to reproduce the error** 1. plug top texture node to Base input of Principled node, hit Play, camera movement is relatively smooth 2. change texture node to bottom one and camera movement is laggy/choppy (with optix) Video demonstration: https:*files.catbox.moe/t1xxbd.mp4 or https:*files.catbox.moe/n75y4r.mp4 Screenshot of node setup (top texture node is fine, bottom one is problematic): ![image.png](https://archive.blender.org/developer/F13328104/image.png) I can send privately a bit simplified .blend file to developer. test file (not complete): https://drive.google.com/file/d/1Rb1nNZhsdWzGN-6FFITyw08zQw5wEnof/view?usp=sharing
Author

Added subscriber: @tonpix

Added subscriber: @tonpix
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Thanks for the report. Please upload .blend publicly if possible

Thanks for the report. Please upload .blend publicly if possible
Author

In #100106#1397629, @PratikPB2123 wrote:
Thanks for the report. Please upload .blend publicly if possible

https://drive.google.com/file/d/1Rb1nNZhsdWzGN-6FFITyw08zQw5wEnof/view?usp=sharing

> In #100106#1397629, @PratikPB2123 wrote: > Thanks for the report. Please upload .blend publicly if possible https://drive.google.com/file/d/1Rb1nNZhsdWzGN-6FFITyw08zQw5wEnof/view?usp=sharing
Member

Added subscriber: @CharlieJolly

Added subscriber: @CharlieJolly
Member

Thanks for the file. I've not been able to notice any performance drop with either texture connection.
Looks like some textures are missing from the file (all objects are in magenta color when switched to cycles)
Only sketchbookCover.jpg texture is available in file.

Thanks for the file. I've not been able to notice any performance drop with either texture connection. Looks like some textures are missing from the file (all objects are in magenta color when switched to cycles) Only `sketchbookCover.jpg` texture is available in file.
Author

In #100106#1398339, @PratikPB2123 wrote:
Thanks for the file. I've not been able to notice any performance drop with either texture connection.
Looks like some textures are missing from the file (all objects are in magenta color when switched to cycles)
Only sketchbookCover.jpg texture is available in file.

Can't publicly provide fully-textured .blend file due to licensing risk, hence my original suggestion to send file privately.

Nonetheless, with simplified, pink .blend file I'm still seeing performance difference when playing in Cycles viewport. There's new video demo for that specific TextureNodeBug.blend:

https://files.catbox.moe/n75y4r.mp4

> In #100106#1398339, @PratikPB2123 wrote: > Thanks for the file. I've not been able to notice any performance drop with either texture connection. > Looks like some textures are missing from the file (all objects are in magenta color when switched to cycles) > Only `sketchbookCover.jpg` texture is available in file. Can't publicly provide fully-textured .blend file due to licensing risk, hence my original suggestion to send file privately. Nonetheless, with simplified, pink .blend file I'm still seeing performance difference when playing in Cycles viewport. There's new video demo for that specific TextureNodeBug.blend: https://files.catbox.moe/n75y4r.mp4
Member

Thanks for the information. I'll ask others to check this issue

Thanks for the information. I'll ask others to check this issue

Added subscriber: @deadpin

Added subscriber: @deadpin

I can reproduce here using an older 1070 - but only when using OptiX, CUDA and CPU seem fine.

I can reproduce here using an older 1070 - but only when using OptiX, CUDA and CPU seem fine.
Author

In #100106#1398360, @deadpin wrote:
I can reproduce here using an older 1070 - but only when using OptiX, CUDA and CPU seem fine.

I think it's identical case for me on 3080 - CUDA/None and OptiX+CPU seem to have smooth/equal performance on both texture nodes. It's Optix+GPU that results in choppy playback on bottom texture node.

> In #100106#1398360, @deadpin wrote: > I can reproduce here using an older 1070 - but only when using OptiX, CUDA and CPU seem fine. I think it's identical case for me on 3080 - CUDA/None and OptiX+CPU seem to have smooth/equal performance on both texture nodes. It's Optix+GPU that results in choppy playback on bottom texture node.
Member

Changed status from 'Needs User Info' to: 'Needs Developer To Reproduce'

Changed status from 'Needs User Info' to: 'Needs Developer To Reproduce'
Member

I too noticed some performance drop when rendering with Optix. Will forward this report to developers

Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3050 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.78```
I too noticed some performance drop when rendering with Optix. Will forward this report to developers ```**System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3050 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.78```

This issue was referenced by f6ca44efd6

This issue was referenced by f6ca44efd61f419eadffb7b78868c8d0b6f5e5a9

Added subscriber: @brecht

Added subscriber: @brecht

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'
Brecht Van Lommel self-assigned this 2022-08-02 15:25:03 +02:00

One of the two nodes has "Auto Refresh" set, only visible when you switch to image sequence. That should have no effect in this case.

One of the two nodes has "Auto Refresh" set, only visible when you switch to image sequence. That should have no effect in this case.

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Author

Thanks for fixing. Is build with the fix downloadable somewhere? I've tried daily builds, but seems it doesn't have a fix and I don't know how/when fixes are implemented. Could someone explain me?

Thanks for fixing. Is build with the fix downloadable somewhere? I've tried daily builds, but seems it doesn't have a fix and I don't know how/when fixes are implemented. Could someone explain me?

This issue was referenced by 74e6218c35

This issue was referenced by 74e6218c35e839d27ab9db6ad956c24bb47f464e

It should be in the daily builds. However my fix was incomplete, it should hopefully be fixed in tomorrow's build.

It should be in the daily builds. However my fix was incomplete, it should hopefully be fixed in tomorrow's build.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#100106
No description provided.