Fix T100106: image movie/sequence auto refresh affects still image performance